RESOLVED FIXED189557
PSON: No process swap on back navigation after URL bar navigation
https://bugs.webkit.org/show_bug.cgi?id=189557
Summary PSON: No process swap on back navigation after URL bar navigation
Chris Dumez
Reported 2018-09-12 13:10:51 PDT
No process swap on back navigation after URL bar navigation in Safari, even though PSON is enabled.
Attachments
Patch (6.10 KB, patch)
2018-09-12 13:17 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-09-12 13:11:06 PDT
Chris Dumez
Comment 2 2018-09-12 13:17:38 PDT
WebKit Commit Bot
Comment 3 2018-09-12 14:23:48 PDT
Comment on attachment 349576 [details] Patch Clearing flags on attachment: 349576 Committed r235952: <https://trac.webkit.org/changeset/235952>
WebKit Commit Bot
Comment 4 2018-09-12 14:23:50 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 6 2018-09-13 10:35:28 PDT
(In reply to Truitt Savell from comment #5) > The new API test added in https://trac.webkit.org/changeset/235952/webkit > > is failing on Sierra Debug > > Log: > https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK1%20%28Tests%29/ > builds/9512/steps/run-api-tests/logs/stdio I will fix shortly, thanks.
Chris Dumez
Comment 7 2018-09-13 10:44:53 PDT
(In reply to Chris Dumez from comment #6) > (In reply to Truitt Savell from comment #5) > > The new API test added in https://trac.webkit.org/changeset/235952/webkit > > > > is failing on Sierra Debug > > > > Log: > > https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK1%20%28Tests%29/ > > builds/9512/steps/run-api-tests/logs/stdio > > I will fix shortly, thanks. ASSERTION FAILED: !m_mainFrame /Volumes/Data/slave/sierra-debug/build/Source/WebKit/UIProcess/WebPageProxy.cpp(3344) : void WebKit::WebPageProxy::didCreateMainFrame(uint64_t) 1 0x10c8e59a9 WTFCrash 2 0x1114b7d0b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x111d22acb WebKit::WebPageProxy::didCreateMainFrame(unsigned long long) 4 0x1125e0e99 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>, 0ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>&&, std::__1::integer_sequence<unsigned long, 0ul>) 5 0x1125e0df8 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>, std::__1::integer_sequence<unsigned long, 0ul> >(std::__1::tuple<unsigned long long>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long)) 6 0x1125c8bae void IPC::handleMessage<Messages::WebPageProxy::DidCreateMainFrame, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long)>(IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long)) 7 0x1125bfb5c WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x1125d72a4 non-virtual thunk to WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 9 0x111552eba IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x111b2ba34 WebKit::ChildProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 11 0x111d890ad WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x111d89274 non-virtual thunk to WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x1114ff86a IPC::Connection::dispatchMessage(IPC::Decoder&) 14 0x1114f29b1 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 15 0x1114fcf66 IPC::Connection::dispatchIncomingMessages() 16 0x11151d3b2 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 17 0x11151d2d9 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 18 0x10c90cc6d WTF::Function<void ()>::operator()() const 19 0x10c964d13 WTF::RunLoop::performWork() 20 0x10c9656a4 WTF::RunLoop::performWork(void*) 21 0x7fff7b5123e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 22 0x7fff7b4f365c __CFRunLoopDoSources0 23 0x7fff7b4f2b46 __CFRunLoopRun 24 0x7fff7b4f2544 CFRunLoopRunSpecific 25 0x7fff7cf23252 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 26 0x10bc25343 TestWebKitAPI::Util::run(bool*) 27 0x10ba9953f ProcessSwap_BackWithoutSuspendedPage_Test::TestBody() 28 0x10bdcf31a void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 29 0x10bd7b8a7 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 30 0x10bd7b7e5 testing::Test::Run() 31 0x10bd7d40d testing::TestInfo::Run()
Note You need to log in before you can comment on or make changes to this bug.